RESOLVED FIXED230742
Vorbis decoder can't be instantiated - Remove workaround added in bug 228139
https://bugs.webkit.org/show_bug.cgi?id=230742
Summary Vorbis decoder can't be instantiated - Remove workaround added in bug 228139
Jean-Yves Avenard [:jya]
Reported 2021-09-24 01:02:10 PDT
Vorbis decoder can't be instantiated - Remove workaround added in bug 228139 now that CoreMedia fixed it.
Attachments
Patch (3.65 KB, patch)
2021-09-24 02:17 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (3.70 KB, patch)
2021-09-27 16:37 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-09-24 01:03:25 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-09-24 02:17:27 PDT
Jean-Yves Avenard [:jya]
Comment 3 2021-09-24 08:02:14 PDT
Comment on attachment 439137 [details] Patch unrelated failures
EWS
Comment 4 2021-09-27 16:30:42 PDT
/Volumes/Data/worker/Commit-Queue/build/Source/WTF/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Jean-Yves Avenard [:jya]
Comment 5 2021-09-27 16:37:03 PDT
Created attachment 439415 [details] Patch Add missing Reviewed by line in Changelog
EWS
Comment 6 2021-09-27 17:49:13 PDT
Committed r283156 (242204@main): <https://commits.webkit.org/242204@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439415 [details].
Jean-Yves Avenard [:jya]
Comment 7 2021-10-04 00:03:17 PDT
This didn't get fix, missing bool keyword
Note You need to log in before you can comment on or make changes to this bug.